--- a/pipeline/graph.html
+++ b/pipeline/graph.html
@@ -105,7 +105,10 @@
   <!-- Header -->
   <div class="pipeline-header">
     <h1>📊 Peer Review Quality Analysis Dashboard</h1>
-    <a href="/">← Back to Pipeline</a>
+    <div style="display: flex; gap: 10px;">
+      <a href="/correlation" style="background: rgba(40, 167, 69, 0.8);">📊 Score Analysis</a>
+      <a href="/">← Pipeline</a>
+    </div>
   </div>
   
   <!-- Data Status -->
