--- a/pipeline/index.html
+++ b/pipeline/index.html
@@ -341,10 +341,13 @@
     <div class="container">
         <h1>📊 Review Graph Data Pipeline</h1>
         
-        <!-- Quick Access Button -->
-        <div style="text-align: center; margin-bottom: 20px;">
+        <!-- Quick Access Buttons -->
+        <div style="text-align: center; margin-bottom: 20px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
             <a href="/graph.html" class="view-graph-btn" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
-                📈 View Graph Visualization →
+                📈 Graph Visualization
+            </a>
+            <a href="/correlation" class="view-graph-btn" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%);">
+                📊 Score-Review Analysis
             </a>
         </div>
         
