update pipline by add score analysis

--- a/pipeline/graph.html
+++ b/pipeline/graph.html
@@ -137,7 +137,7 @@
     <button class="switch-btn active" onclick="window.updateGraphMode('all')">All Metrics</button>
     <button class="switch-btn" onclick="window.updateGraphMode('relevance')">Relevance</button>
     <button class="switch-btn" onclick="window.updateGraphMode('concreteness')">Concreteness</button>
-    <button class="switch-btn" onclick="window.updateGraphMode('constructive')">Constructive</button>
+    <button class="switch-btn" onclick="window.updateGraphMode('constructive')">Constructiveness</button>
   </div>
 
   <!-- Legend -->
@@ -169,7 +169,7 @@
     <strong>Quality Labels:</strong> 
     <span class="label-tag relevance">R</span> Relevance | 
     <span class="label-tag concreteness">C</span> Concreteness | 
-    <span class="label-tag constructive">S</span> Constructive
+    <span class="label-tag constructive">S</span> Constructiveness
   </div>
   
   <!-- Search and Filter Controls -->
@@ -245,7 +245,7 @@
         },
         constructive: { 
             colors: ["#F1DCFF", "#C78EED", "#9444CA", "#590A8E"], 
-            title: 'Constructive Score' 
+            title: 'Constructiveness Score' 
         },
         all: {
             colors: ["#F0F0F0", "#E0E0E0", "#757575", "#424242"],
