--- a/pipeline/score_review_correlation.html
+++ b/pipeline/score_review_correlation.html
@@ -487,7 +487,7 @@
                     <canvas id="concretenessCorrelationChart"></canvas>
                 </div>
                 <div class="chart-box constructive">
-                    <h3>📕 Constructive vs Score</h3>
+                    <h3>📕 Constructiveness vs Score</h3>
                     <canvas id="constructiveCorrelationChart"></canvas>
                 </div>
             </div>
@@ -523,7 +523,7 @@
                     <canvas id="hwConcretenessChart"></canvas>
                 </div>
                 <div class="chart-box constructive">
-                    <h3>Score vs Constructive %</h3>
+                    <h3>Score vs Constructiveness %</h3>
                     <canvas id="hwConstructiveChart"></canvas>
                 </div>
             </div>
@@ -561,7 +561,7 @@
                             <th>Reviews</th>
                             <th>Relevance</th>
                             <th>Concreteness</th>
-                            <th>Constructive</th>
+                            <th>Constructiveness</th>
                             <th>Quality</th>
                         </tr>
                     </thead>
@@ -721,7 +721,7 @@
                 </div>
                 <div class="stat-item constructive">
                     <div class="value">${corrConstructive.toFixed(3)}</div>
-                    <div class="label">r (Constructive)</div>
+                    <div class="label">r (Constructiveness)</div>
                 </div>
             `;
         }
@@ -776,14 +776,14 @@
                 }
             });
             
-            // Constructive chart
+            // Constructiveness chart
             if (charts.constructiveCorr) charts.constructiveCorr.destroy();
             charts.constructiveCorr = new Chart(document.getElementById('constructiveCorrelationChart'), {
                 type: 'bar',
                 data: {
                     labels: hwList,
                     datasets: [{
-                        label: 'Constructive r',
+                        label: 'Constructiveness r',
                         data: constructiveCorr,
                         backgroundColor: 'rgba(148, 68, 202, 0.7)',
                         borderColor: '#9444ca',
@@ -898,7 +898,7 @@
                     },
                     scales: {
                         x: { title: { display: true, text: 'HW Score' }, min: 0, max: 100 },
-                        y: { title: { display: true, text: 'Constructive %' }, min: 0, max: 100 }
+                        y: { title: { display: true, text: 'Constructiveness %' }, min: 0, max: 100 }
                     }
                 }
             });
@@ -953,7 +953,7 @@
                             borderWidth: 1
                         },
                         {
-                            label: 'Constructive',
+                            label: 'Constructiveness',
                             data: hwList.map(hw => correlations[hw]?.correlation_constructive || 0),
                             backgroundColor: 'rgba(148, 68, 202, 0.7)',
                             borderColor: '#9444ca',
@@ -1022,7 +1022,7 @@
                 </div>
                 <div class="overview-item constructive">
                     <div class="value">${student.constructive_score || 0}%</div>
-                    <div class="label">Constructive</div>
+                    <div class="label">Constructiveness</div>
                 </div>
                 <div class="overview-item">
                     <div class="value">${student.quality_score}%</div>
@@ -1104,7 +1104,7 @@
                             pointBackgroundColor: '#28a745'
                         },
                         {
-                            label: 'Constructive',
+                            label: 'Constructiveness',
                             data: hwConstructive,
                             borderColor: '#9444ca',
                             backgroundColor: 'rgba(148, 68, 202, 0.2)',
