update invite letter

--- a/pipeline/login.html
+++ b/pipeline/login.html
@@ -207,11 +207,11 @@
             </button>
         </form>
 
-        <div class="info-box">
+        <!-- <div class="info-box">
             <h4>🔐 Demo Accounts</h4>
             <p>Username: <code>student1</code> / Password: <code>student123</code></p>
             <p>Username: <code>student2</code> / Password: <code>student123</code></p>
-        </div>
+        </div> -->
 
         <div class="register-link">
             <p>Don't have an account? <a href="/register">Create Account</a></p>
